--- a/yuna/css/event_ended3.css
+++ b/yuna/css/event_ended3.css
@@ -27,11 +27,12 @@
 }
 .event > .event__buttons > .event__buttons-active {
   margin-right: 20px;
-  color: #000;
+
   cursor: pointer;
 }
 
 .event > .event__buttons > .event__buttons-ended {
+  color: #000;
   margin-left: 20px;
   cursor: pointer;
 }
@@ -65,17 +66,24 @@
   word-break: keep-all;
   margin: 15px 0px;
 }
-.event > .event__pageButton > .event__pageButton-first {
+.event > .event__pageButtons {
+  display: flex;
+  flex-direction: row;
+}
+.event > .event__pageButtons > .event__pageButton {
   padding: 0;
   width: 34px;
   height: 34px;
   line-height: 34px;
   border: 1px solid #d7d5d5;
 
-  color: #2a3e48;
-  border-bottom: 2px solid#2a3e48;
+  color: #909090;
 
   margin: 80px auto;
 
   cursor: pointer;
+}
+.event > .event__pageButtons > .event__pageButton-third {
+  color: #2a3e48;
+  border-bottom: 2px solid#2a3e48;
 }
