--- a/youngson/css/shop_header.css
+++ b/youngson/css/shop_header.css
@@ -21,6 +21,10 @@
   font-weight: 700;
 }
 .shop_header_wrap > .shop_header_info > .shop_sort_selector {
+  /* slect 태그 보더, 화살표 지우기 */
+  appearance: none;
+  outline: none;
+
   display: flex;
   align-items: center;
   width: 120px;
