--- a/yuna/css/brandwork.css
+++ b/yuna/css/brandwork.css
@@ -55,10 +55,7 @@
 
   margin-bottom: 80px;
 }
-.brandwork > .brandwork__pageButton {
-  display: flex;
-  flex-direction: row;
-}
+
 .brandwork > .brandwork__pageButton > .brandwork__pageButton-first {
   padding: 0;
   width: 34px;
@@ -68,6 +65,8 @@
 
   color: #2a3e48;
   border-bottom: 2px solid#2a3e48;
+
+  cursor: pointer;
 }
 .brandwork > .brandwork__pageButton > .brandwork__pageButton-second {
   padding: 0;
@@ -79,4 +78,6 @@
   color: #909090;
 
   margin-bottom: 80px;
+
+  cursor: pointer;
 }
