--- a/yuna/css/news2.css
+++ b/yuna/css/news2.css
@@ -86,7 +86,8 @@
 }
 
 /* 페이지 버튼 */
-.news__pageButtons > .news__pageButton {
+.news__pageButtons > .news__pageButton-first,
+.news__pageButtons > .news__pageButton-third {
   width: 34px;
   height: 34px;
   line-height: 34px;
@@ -99,6 +100,12 @@
 }
 
 .news__pageButtons > .news__pageButton-second {
+  width: 34px;
+  height: 34px;
+  line-height: 34px;
+  border: 1px solid #d7d5d5;
+  margin: 80px auto;
+
   color: #2a3e48;
   border-bottom: 2px solid #2a3e48;
 }
