--- a/yuna/css/brandwork.css
+++ b/yuna/css/brandwork.css
@@ -55,6 +55,9 @@
 
   margin-bottom: 80px;
 }
+.brandwork > .brandwork__pageButton {
+  display: none;
+}
 
 .brandwork > .brandwork__pageButton > .brandwork__pageButton-first {
   padding: 0;
@@ -80,4 +83,88 @@
   margin-bottom: 80px;
 
   cursor: pointer;
+}
+.brandwork > .brandwork__mobileButton {
+  display: none;
+}
+@media screen and (max-width: 768px) {
+  .brandwork {
+    background-color: #f5f5f5;
+  }
+  .brandwork > .brandwork__title {
+    font-size: 20px;
+    font-weight: 500;
+  }
+  .brandwork > .brandwork__section {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
+    gap: 0px;
+  }
+  .brandwork > .brandwork__section > .brandwork__contents {
+    padding: 0px 0px 0px 10x;
+    margin-top: 30px;
+
+    display: flex;
+    flex-direction: column;
+  }
+
+  .brandwork
+    > .brandwork__section
+    > .brandwork__contents
+    > .brandwork__contents-image {
+    width: 175px;
+    height: 175px;
+
+    object-fit: cover;
+  }
+  .brandwork
+    > .brandwork__section
+    > .brandwork__contents
+    > .brandwork__contents-title {
+    margin-top: 7px;
+    font-size: 12px;
+
+    font-weight: 400;
+
+    line-height: 16px;
+  }
+  .brandwork
+    > .brandwork__section
+    > .brandwork__contents
+    > .brandwork__contents-sub {
+    font-size: 12px;
+    margin: 0;
+
+    font-weight: 400;
+
+    line-height: 16px;
+  }
+  .brandwork > .brandwork__pageButton {
+    display: none;
+  }
+  /* 모바일 버전 버튼 */
+  .brandwork > .brandwork__mobileButton {
+    display: block;
+    margin: 60px 0px;
+    font-size: 12px;
+    color: #929292;
+
+    display: flex;
+    flex-direction: row;
+    gap: 17px;
+  }
+  .brandwork > .brandwork__mobileButton > .brandwork__mobileButton-number {
+    gap: 5px;
+
+    display: flex;
+    flex-direction: row;
+  }
+}
+.brandwork
+  > .brandwork__mobileButton
+  > .brandwork__mobileButton-number
+  > .brandwork__mobileButton-first {
+  color: #000000;
+  font-weight: 700;
 }
