--- a/yuna/css/event_active.css
+++ b/yuna/css/event_active.css
@@ -56,7 +56,7 @@
 }
 .event > .event__section > .event__section-contents > .event__section-title {
   display: block;
-  overflow: hidden;
+
   width: 87%;
   font-size: 18px;
   line-height: 28px;
@@ -78,4 +78,82 @@
   margin: 80px auto;
 
   cursor: pointer;
+}
+.event_mobileButton {
+  display: none;
+}
+@media screen and (max-width: 768px) {
+  .event {
+    background-color: #f5f5f5;
+  }
+  .event > .event__title {
+    font-size: 20px;
+    font-weight: 500;
+  }
+  .event > .event__section {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+
+    gap: 0px;
+  }
+  .event > .event__buttons {
+    margin-top: 25px;
+  }
+  .event > .event__buttons > .event__button {
+    font-size: 12px;
+    margin-bottom: 30px;
+  }
+  .event > .event__buttons > .event__buttons-active {
+    margin-right: 10px;
+  }
+
+  .event > .event__buttons > .event__buttons-ended {
+    margin-left: 10px;
+  }
+
+  .event > .event__section > .event__section-contents {
+    padding: 20px 30px;
+    margin-top: 00px;
+
+    display: flex;
+    flex-direction: column;
+  }
+
+  .event > .event__section > .event__section-contents > .event__section-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .event > .event__section > .event__section-contents > .event__section-title {
+    font-size: 13px;
+    line-height: 22px;
+    margin: 0px;
+    text-align: center;
+    margin-top: 10px;
+    font-weight: 500;
+  }
+  .event > .event__pageButton {
+    display: none;
+  }
+  /* 모바일 버전 버튼 */
+  .event_mobileButton {
+    display: block;
+    margin: 80px 0px;
+    font-size: 12px;
+    color: #929292;
+
+    display: flex;
+    flex-direction: row;
+    gap: 17px;
+  }
+  .event_mobileButton > .event_mobileButton-number {
+    gap: 5px;
+
+    display: flex;
+    flex-direction: row;
+  }
+  .event_mobileButton > .event_mobileButton-number > .event_mobileButton-first {
+    color: #000000;
+    font-weight: 700;
+  }
 }
