--- a/yuna/css/news2.css
+++ b/yuna/css/news2.css
@@ -86,6 +86,7 @@
 }
 
 /* 페이지 버튼 */
+
 .news__pageButtons > .news__pageButton-first,
 .news__pageButtons > .news__pageButton-third {
   width: 34px;
@@ -108,4 +109,7 @@
 
   color: #2a3e48;
   border-bottom: 2px solid #2a3e48;
+}
+.news > .news_mobileButton {
+  display: none;
 }
