--- a/yuna/css/news3.css
+++ b/yuna/css/news3.css
@@ -86,6 +86,7 @@
 }
 
 /* 페이지 버튼 */
+
 .news__pageButtons > .news__pageButton {
   width: 34px;
   height: 34px;
@@ -101,4 +102,7 @@
 .news__pageButtons > .news__pageButton-third {
   color: #2a3e48;
   border-bottom: 2px solid #2a3e48;
+}
+.news > .news_mobileButton {
+  display: none;
 }
