--- a/yuna/css/news.css
+++ b/yuna/css/news.css
@@ -8,7 +8,6 @@
   background-color: #f5f5f5;
   color: #2a3e48;
 }
-
 /* 제목 */
 .news__title {
   font-size: 40px;
@@ -16,7 +15,7 @@
   line-height: 38px;
   margin: 80px 0px 20px;
 }
-
+/* 웹 버전 */
 /* 테이블 */
 .news__table {
   width: 60vw; /* 뷰포트 가로의 80% */
@@ -87,7 +86,14 @@
 
 /* 페이지 버튼 */
 
-.news > .news__pageButtons > .news__pageButton {
+.news > .news__section > .news__pageButtons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 5px;
+}
+
+.news > .news__section > .news__pageButtons > .news__pageButton {
   width: 34px;
   height: 34px;
   line-height: 34px;
@@ -98,49 +104,96 @@
   cursor: pointer;
 }
 
-.news > .news__pageButtons > .news__pageButton-first {
+.news > .news__section > .news__pageButtons > .news__pageButton-first {
   color: #2a3e48;
   border-bottom: 2px solid #2a3e48;
+}
+/* 모바일버전 숨김 */
+.news > .news__mobile_section {
+  display: none;
 }
 .news > .news_mobileButton {
   display: none;
 }
 @media screen and (max-width: 768px) {
-  /* 헤더 숨기기 */
-  .news__table_header {
+  /* 제목 */
+  .news__title {
+    padding: 30px 0;
+    font-size: 20px;
+    font-weight: 600;
+  }
+  .news > .news__section {
     display: none;
   }
+  .news > .news__mobile_section {
+    display: block;
+    width: 100%;
+  }
+  .news > .news__mobile_section > .news__mobile_contens {
+    width: 80%;
+    border-bottom: 1px solid #ddd;
 
-  /* 행을 블록처럼 보이게 */
-  .news__table_row {
     display: flex;
     flex-direction: column;
-    padding: 12px 0;
-    border-bottom: 1px solid #ddd;
-  }
+    align-items: start;
 
-  /* 제목 */
-  .news__table_title {
-    font-size: 16px;
-    font-weight: 600;
-    margin-bottom: 6px;
-    color: #2a3e48;
-    text-align: left; /* 제목은 왼쪽 정렬 */
-  }
+    text-align: start;
 
-  /* 번호는 숨기기 */
-  .news__table_num {
-    display: none;
+    padding: 15px 10px;
+    margin: 0px 20px;
   }
-
-  /* 날짜/작성자/조회수를 한 줄로 */
-  .news__table_date,
-  .news__table_writer,
-  .news__table_view {
+  .news__mobile_section > .news__mobile_contens > .news__mobile_contents_w_date,
+  .news__mobile_section
+    > .news__mobile_contens
+    > .news__mobile_contents_r_view {
+    display: flex;
+    flex-direction: row;
+    text-align: start;
+  }
+  .news__mobile_section > .news__mobile_contens > .news__mobile_contents_title {
     font-size: 13px;
-    color: #777;
-    display: inline-block;
-    margin-right: 12px;
-    text-align: left;
+    color: #000;
+    line-height: 24px;
+  }
+  .news__mobile_section
+    > .news__mobile_contens
+    > .news__mobile_contents_w_date {
+    font-size: 10px;
+    line-height: 18px;
+    gap: 5px;
+  }
+  .news__mobile_section
+    > .news__mobile_contens
+    > .news__mobile_contents_r_view {
+    color: #999;
+    font-size: 12px;
+    margin-top: 7px;
+    gap: 5px;
+  }
+
+  /* 모바일 버전 버튼 */
+
+  .news > .news_mobileButton {
+    display: block;
+    margin: 80px 0px;
+    font-size: 12px;
+    color: #929292;
+
+    display: flex;
+    flex-direction: row;
+    gap: 17px;
+  }
+  .news > .news_mobileButton > .news_mobileButton-number {
+    gap: 5px;
+
+    display: flex;
+    flex-direction: row;
+  }
+  .news
+    > .news_mobileButton
+    > .news_mobileButton-number
+    > .news_mobileButton-first {
+    color: #000000;
+    font-weight: 700;
   }
 }
