--- a/youngson/css/shop_pagehandler.css
+++ b/youngson/css/shop_pagehandler.css
@@ -1,5 +1,6 @@
 .shop_pagehandler {
-  margin-top: 80px;
+  width: 100%;
+  margin: 80px auto 0 auto;
 }
 
 .shop_pagehandler > ul {
@@ -9,7 +10,6 @@
 }
 .shop_pagehandler > ul > li {
   position: relative;
-
   font-size: 12px;
   font-weight: 700;
   text-align: center;
@@ -20,12 +20,25 @@
   border: 1px solid #d7d7d5;
   display: table-cell;
   background: white;
+  cursor: pointer;
+}
+.shop_pagehandler > .shop_page_moreload {
+  display: none;
+  width: 98%;
+  margin: 0 auto;
+  border: 1px solid #2a3e48;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 38px;
+  height: 40px;
+  color: #2a3e48;
+  background-color: #fafafa;
 }
 
-.shop_pagehandler > ul > .selected {
+.shop_pagehandler > ul > .shop_page_selected {
   color: #2a3e48;
 }
-.shop_pagehandler > ul > .selected::after {
+.shop_pagehandler > ul > .shop_page_selected::after {
   position: absolute;
   content: "";
   width: 100%;
@@ -33,4 +46,13 @@
   background: #2a3e48;
   left: 0;
   bottom: 0;
+}
+
+@media screen and (max-width: 768px) {
+  .shop_pagehandler > ul {
+    display: none;
+  }
+  .shop_pagehandler > .shop_page_moreload {
+    display: block;
+  }
 }
