--- a/youngson/css/community.css
+++ b/youngson/css/community.css
@@ -3,7 +3,7 @@ body {
   background-color: #fafafa;
 }
 .community_containor {
-  max-width: 1400px;
+  max-width: 1080px;
   margin: 0 auto;
   padding: 80px 0 120px;
 }
@@ -21,10 +21,22 @@ body {
   font-size: 15px;
   margin-top: 30px;
 }
-.community_img {
-  max-width: 1080px;
-  margin: 0 auto;
+.community_mobile_img {
+  display: none;
 }
-.community_img > img {
-  object-fit: cover;
+
+@media screen and (max-width: 768px) {
+  .community_containor {
+    max-width: 768px;
+    margin: 0 auto;
+  }
+  .community_browser_img {
+    display: none;
+  }
+  .community_mobile_img {
+    display: inline;
+  }
+  .community_mobile_img > img {
+    width: 100%;
+  }
 }
