--- a/yuna/css/event_active.css
+++ b/yuna/css/event_active.css
@@ -18,7 +18,8 @@
 }
 .event > .event__buttons > .event__button {
   color: #9f9f9f;
-  font-size: 16px;
+  margin-right: 20px;
+  font-size: 20px;
   line-height: 30px;
   font-weight: 500;
   background-color: transparent;
