Feat: Shop, Community 페이지 라우팅 연결 완료

--- a/taejin/css/header.css
+++ b/taejin/css/header.css
@@ -2,7 +2,7 @@
     --header-height: 80px;
 }
 header {
-    width: 100%;
+    width: 100vw;
     height: var(--header-height);
     z-index: 999;
     position: fixed;
