--- a/yuna/css/brandwork.css
+++ b/yuna/css/brandwork.css
@@ -55,6 +55,15 @@
 
   margin-bottom: 80px;
 }
+.brandwork > .brandwork__pageButton {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+
+  margin: 80px auto;
+}
 
 .brandwork > .brandwork__pageButton > .brandwork__pageButton-first {
   padding: 0;
@@ -62,22 +71,25 @@
   height: 34px;
   line-height: 34px;
   border: 1px solid #d7d5d5;
+  text-align: center;
+  text-decoration: none;
 
   color: #2a3e48;
   border-bottom: 2px solid#2a3e48;
 
   cursor: pointer;
 }
+
 .brandwork > .brandwork__pageButton > .brandwork__pageButton-second {
   padding: 0;
   width: 34px;
   height: 34px;
   line-height: 34px;
   border: 1px solid #d7d5d5;
+  text-align: center;
+  text-decoration: none;
 
   color: #909090;
-
-  margin-bottom: 80px;
 
   cursor: pointer;
 }
@@ -150,6 +162,11 @@
     display: flex;
     flex-direction: row;
     gap: 17px;
+  }
+  .brandwork > .brandwork__mobileButton > .brandwork__mobileButton-left,
+  .brandwork > .brandwork__mobileButton > .brandwork__mobileButton-right {
+    text-decoration: none;
+    color: #000000;
   }
   .brandwork > .brandwork__mobileButton > .brandwork__mobileButton-number {
     gap: 5px;
