--- a/yuna/css/brandwork2.css
+++ b/yuna/css/brandwork2.css
@@ -56,28 +56,40 @@
   margin-bottom: 80px;
 }
 
+.brandwork > .brandwork__pageButton {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+
+  margin: 80px auto;
+}
+
 .brandwork > .brandwork__pageButton > .brandwork__pageButton-first {
   padding: 0;
   width: 34px;
   height: 34px;
   line-height: 34px;
   border: 1px solid #d7d5d5;
-
-  color: #909090;
+  text-align: center;
+  text-decoration: none;
 
   cursor: pointer;
 }
+
 .brandwork > .brandwork__pageButton > .brandwork__pageButton-second {
   padding: 0;
   width: 34px;
   height: 34px;
   line-height: 34px;
   border: 1px solid #d7d5d5;
+  text-align: center;
+  text-decoration: none;
 
+  color: #909090;
   color: #2a3e48;
   border-bottom: 2px solid#2a3e48;
-
-  margin-bottom: 80px;
   cursor: pointer;
 }
 .brandwork > .brandwork__mobileButton {
@@ -149,6 +161,11 @@
     display: flex;
     flex-direction: row;
     gap: 17px;
+  }
+  .brandwork > .brandwork__mobileButton > .brandwork__mobileButton-left,
+  .brandwork > .brandwork__mobileButton > .brandwork__mobileButton-right {
+    text-decoration: none;
+    color: #000000;
   }
   .brandwork > .brandwork__mobileButton > .brandwork__mobileButton-number {
     gap: 5px;
