--- a/yuna/css/event_active.css
+++ b/yuna/css/event_active.css
@@ -23,6 +23,7 @@
   line-height: 30px;
   font-weight: 500;
   background-color: transparent;
+  text-decoration: none;
 
   border: none;
 }
@@ -66,18 +67,27 @@
   word-break: keep-all;
   margin: 15px 0px;
 }
+.event > .event__pageButtons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+
+  margin: 80px auto;
+}
 .event > .event__pageButton > .event__pageButton-first {
   padding: 0;
   width: 34px;
   height: 34px;
   line-height: 34px;
   border: 1px solid #d7d5d5;
+  text-align: center;
+  text-decoration: none;
 
+  color: #909090;
   color: #2a3e48;
   border-bottom: 2px solid#2a3e48;
-
-  margin: 80px auto;
-
   cursor: pointer;
 }
 .event_mobileButton {
@@ -137,23 +147,28 @@
     display: none;
   }
   /* 모바일 버전 버튼 */
-  .event_mobileButton {
+  .event > .event_mobileButton {
     display: block;
-    margin: 80px 0px;
+    margin: 60px 0px;
     font-size: 12px;
     color: #929292;
 
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
     gap: 17px;
   }
-  .event_mobileButton > .event_mobileButton-number {
+  .event > .event_mobileButton > .event_mobileButton-number {
     gap: 5px;
 
     display: flex;
     flex-direction: row;
   }
-  .event_mobileButton > .event_mobileButton-number > .event_mobileButton-first {
+  .event
+    > .event_mobileButton
+    > .event_mobileButton-number
+    > .event_mobileButton-first {
     color: #000000;
     font-weight: 700;
   }
