--- a/yuna/css/event_ended.css
+++ b/yuna/css/event_ended.css
@@ -28,12 +28,14 @@
 }
 .event > .event__buttons > .event__buttons-active {
   cursor: pointer;
+  text-decoration: none;
 }
 
 .event > .event__buttons > .event__buttons-ended {
   color: #000;
   margin-left: 20px;
   cursor: pointer;
+  text-decoration: none;
 }
 .event > .event__section {
   display: grid;
@@ -65,7 +67,13 @@
   margin: 15px 0px;
 }
 .event > .event__pageButtons {
-  margin: 80px 0px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+
+  margin: 80px auto;
 }
 
 .event > .event__pageButtons > .event__pageButton {
@@ -74,6 +82,8 @@
   height: 34px;
   line-height: 34px;
   border: 1px solid #d7d5d5;
+  text-align: center;
+  text-decoration: none;
 
   color: #909090;
 
@@ -108,6 +118,7 @@
   .event > .event__buttons > .event__button {
     font-size: 12px;
     margin-bottom: 30px;
+    text-decoration: none;
   }
   .event > .event__buttons > .event__buttons-active {
     margin-right: 10px;
@@ -148,10 +159,15 @@
     margin: 80px 0px;
     font-size: 12px;
     color: #929292;
-
+    text-decoration: none;
     display: flex;
     flex-direction: row;
     gap: 17px;
+    text-decoration: none;
+  }
+  .event > .event_mobileButton > .event_mobileButton-left,
+  .event > .event_mobileButton > .event_mobileButton-right {
+    text-decoration: none;
   }
   .event > .event_mobileButton > .event_mobileButton-number {
     gap: 5px;
