--- a/yuna/css/news3.css
+++ b/yuna/css/news3.css
@@ -91,26 +91,33 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
   gap: 5px;
+  padding: 0px;
+
+  margin: 80px auto;
 }
 
 .news > .news__section > .news__pageButtons > .news__pageButton {
+  padding: 0;
   width: 34px;
   height: 34px;
   line-height: 34px;
   border: 1px solid #d7d5d5;
-  margin: 80px 0px;
+  text-align: center;
+  text-decoration: none;
+
   color: #909090;
 
   cursor: pointer;
+  margin: 80px 0px;
 }
-
 .news > .news__section > .news__pageButtons > .news__pageButton-third {
   color: #2a3e48;
-  border-bottom: 2px solid #2a3e48;
+  border-bottom: 2px solid#2a3e48;
 }
 
-/* 모바일버전 */
+/* 모바일버전 숨김 */
 .news > .news__mobile_section {
   display: none;
 }
@@ -174,9 +181,6 @@
   }
 
   /* 모바일 버전 버튼 */
-  .news > .news__pageButtons {
-    display: none;
-  }
   .news > .news_mobileButton {
     display: block;
     margin: 80px 0px;
@@ -186,6 +190,11 @@
     display: flex;
     flex-direction: row;
     gap: 17px;
+  }
+  .news > .news_mobileButton > .news_mobileButton-left,
+  .news > .news_mobileButton > .news_mobileButton-right {
+    color: #929292;
+    text-decoration: none;
   }
   .news > .news_mobileButton > .news_mobileButton-number {
     gap: 5px;
