--- a/yuna/css/event_ended3.css
+++ b/yuna/css/event_ended3.css
@@ -1,190 +1,186 @@
 .event {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #f5f5f5;
-    color: #2a3e48;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f5f5f5;
+  color: #2a3e48;
 
-    padding-top: var(--header-height);
+  padding-top: var(--header-height);
 }
 .event > .event__title {
-    font-size: 40px;
-    font-weight: 600;
-    line-height: 38px;
+  font-size: 40px;
+  font-weight: 600;
+  line-height: 38px;
 
-    margin-top: 80px;
+  margin-top: 80px;
 }
 .event > .event__buttons {
-    margin-top: 30px;
+  margin-top: 30px;
 }
 .event > .event__buttons > .event__button {
-    color: #9f9f9f;
-    margin-right: 20px;
-    font-size: 20px;
-    line-height: 30px;
-    font-weight: 500;
-    background-color: transparent;
+  color: #9f9f9f;
+  margin-right: 20px;
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 500;
+  background-color: transparent;
 
-    border: none;
+  border: none;
 }
 .event > .event__buttons > .event__buttons-active {
-    cursor: pointer;
+  cursor: pointer;
+  text-decoration: none;
 }
 
 .event > .event__buttons > .event__buttons-ended {
-    color: #000;
-    margin-left: 20px;
-    cursor: pointer;
+  color: #000;
+  margin-left: 20px;
+  cursor: pointer;
+  text-decoration: none;
 }
 .event > .event__section {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 
-    gap: 50px 25px;
+  gap: 50px 25px;
 }
 .event > .event__section > .event__section-contents {
-    padding: 0px 10px;
-    margin-top: 60px;
+  padding: 0px 10px;
+  margin-top: 60px;
 
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 .event > .event__section > .event__section-contents > .event__section-image {
-    width: 450px;
-    height: 450px;
-    object-fit: cover;
+  width: 450px;
+  height: 450px;
+  object-fit: cover;
 }
 .event > .event__section > .event__section-contents > .event__section-title {
-    display: block;
+  display: block;
 
-    width: 87%;
-    font-size: 18px;
-    line-height: 28px;
-    font-weight: 500;
-    letter-spacing: -0.54px;
-    word-break: keep-all;
-    margin: 15px 0px;
+  width: 87%;
+  font-size: 18px;
+  line-height: 28px;
+  font-weight: 500;
+  letter-spacing: -0.54px;
+  word-break: keep-all;
+  margin: 15px 0px;
 }
 .event > .event__pageButtons {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
 
-    margin: 80px auto;
+  margin: 80px auto;
 }
 
 .event > .event__pageButtons > .event__pageButton {
-    padding: 0;
-    width: 34px;
-    height: 34px;
-    line-height: 34px;
-    border: 1px solid #d7d5d5;
-    text-align: center;
-    text-decoration: none;
+  padding: 0;
+  width: 34px;
+  height: 34px;
+  line-height: 34px;
+  border: 1px solid #d7d5d5;
+  text-align: center;
+  text-decoration: none;
 
-    color: #909090;
+  color: #909090;
 
-    margin: 80px auto;
+  margin: 80px auto;
 
-    cursor: pointer;
+  cursor: pointer;
 }
 .event > .event__pageButtons > .event__pageButton-third {
-    color: #2a3e48;
-    border-bottom: 2px solid#2a3e48;
+  color: #2a3e48;
+  border-bottom: 2px solid#2a3e48;
 }
 .event > .event_mobileButton {
-    display: none;
+  display: none;
 }
 @media screen and (max-width: 768px) {
-    .event {
-        background-color: #f5f5f5;
-    }
-    .event > .event__title {
-        font-size: 20px;
-        font-weight: 500;
-    }
-    .event > .event__section {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
+  .event {
+    background-color: #f5f5f5;
+  }
+  .event > .event__title {
+    font-size: 20px;
+    font-weight: 500;
+  }
+  .event > .event__section {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
 
-        gap: 0px;
-    }
-    .event > .event__buttons {
-        margin-top: 25px;
-    }
-    .event > .event__buttons > .event__button {
-        font-size: 12px;
-        margin-bottom: 30px;
-    }
-    .event > .event__buttons > .event__buttons-active {
-        margin-right: 10px;
-    }
+    gap: 0px;
+  }
+  .event > .event__buttons {
+    margin-top: 25px;
+  }
+  .event > .event__buttons > .event__button {
+    font-size: 12px;
+    margin-bottom: 30px;
+  }
+  .event > .event__buttons > .event__buttons-active {
+    margin-right: 10px;
+  }
 
-    .event > .event__buttons > .event__buttons-ended {
-        margin-left: 10px;
-    }
+  .event > .event__buttons > .event__buttons-ended {
+    margin-left: 10px;
+  }
 
-    .event > .event__section > .event__section-contents {
-        padding: 20px 30px;
-        margin-top: 00px;
+  .event > .event__section > .event__section-contents {
+    padding: 20px 30px;
+    margin-top: 00px;
 
-        display: flex;
-        flex-direction: column;
-    }
+    display: flex;
+    flex-direction: column;
+  }
 
-    .event
-        > .event__section
-        > .event__section-contents
-        > .event__section-image {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
-    .event
-        > .event__section
-        > .event__section-contents
-        > .event__section-title {
-        font-size: 13px;
-        line-height: 22px;
-        margin: 0px;
-        text-align: center;
-        margin-top: 10px;
-        font-weight: 500;
-    }
-    .event > .event__pageButtons {
-        display: none;
-    }
+  .event > .event__section > .event__section-contents > .event__section-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .event > .event__section > .event__section-contents > .event__section-title {
+    font-size: 13px;
+    line-height: 22px;
+    margin: 0px;
+    text-align: center;
+    margin-top: 10px;
+    font-weight: 500;
+  }
+  .event > .event__pageButtons {
+    display: none;
+  }
 
-    /* 모바일 버전 버튼 */
-    .event > .event_mobileButton {
-        display: block;
-        margin: 80px 0px;
-        font-size: 12px;
-        color: #929292;
-        text-decoration: none;
-        display: flex;
-        flex-direction: row;
-        gap: 17px;
-        text-decoration: none;
-    }
-    .event > .event_mobileButton > .event_mobileButton-left,
-    .event > .event_mobileButton > .event_mobileButton-right {
-        text-decoration: none;
-    }
-    .event > .event_mobileButton > .event_mobileButton-number {
-        gap: 5px;
+  /* 모바일 버전 버튼 */
+  .event > .event_mobileButton {
+    display: block;
+    margin: 80px 0px;
+    font-size: 12px;
+    color: #929292;
+    text-decoration: none;
+    display: flex;
+    flex-direction: row;
+    gap: 17px;
+    text-decoration: none;
+  }
+  .event > .event_mobileButton > .event_mobileButton-left,
+  .event > .event_mobileButton > .event_mobileButton-right {
+    text-decoration: none;
+  }
+  .event > .event_mobileButton > .event_mobileButton-number {
+    gap: 5px;
 
-        display: flex;
-        flex-direction: row;
-    }
-    .event
-        > .event_mobileButton
-        > .event_mobileButton-number
-        > .event_mobileButton-first {
-        color: #000000;
-        font-weight: 700;
-    }
+    display: flex;
+    flex-direction: row;
+  }
+  .event
+    > .event_mobileButton
+    > .event_mobileButton-number
+    > .event_mobileButton-first {
+    color: #000000;
+    font-weight: 700;
+  }
 }
